src/index.scss
@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap');

:root {
    font-size: 16px;
    --bg: #f8fafc;
    --accent: #e2e8f0;
    --text: #1e293b;
    --time: 250ms;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Cabin', sans-serif;
    -webkit-tap-highlight-color: transparent;
    color: var(--text);
}

body {
    width: 100%;
    min-height: 100vh;
}

body::-webkit-scrollbar {
    display: none;
}

button,
button:focus {
    cursor: pointer;
    outline: none;
    border: none;
}

svg {
    display: flex;
}

hr {
    border-style: solid;
    border-width: 0.5px;
    border-color: var(--accent);
}

.container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.copied {
    position: fixed;
    bottom: 2rem;
    left: 50%;
    transform: translateX(-50%);
    color: var(--accent);
    font-size: 1.4rem;
    padding: 0.2rem 0.4rem;
    background-color: var(--text);
    letter-spacing: 0.2rem;
    border-radius: 0.4rem;
}

@media only screen and (max-width: 1100px) {
    .container {
        overflow-x: visible;
    }
}

